--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: Chris Carter
+title: Unapologetics
 
 auto: true
 markdown: kramdown
@@ -7,5 +7,3 @@ permalink: /:year/:month/:day/:title
 
 sass:
   sass_dir: _sass
-
-# description:
