--- a/admin/config.yml
+++ b/admin/config.yml
@@ -6,23 +6,9 @@ backend:
 publish_mode: editorial_workflow
 
 # This line should *not* be indented
-media_folder: "_assets/img" # Media files will be stored in the repo under images/uploads
+media_folder: "/assets/img" # Media files will be stored in the repo under images/uploads
 
 collections:
-  - name: "articles" # Used in routes, e.g., /admin/collections/blog
-    label: "Article" # Used in the UI
-    folder: "_posts/articles/" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    fields: # The fields for each document, usually in front matter
-      - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Author", name: "author", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Body", name: "body", widget: "markdown"}
-      - {label: "Categories", name: "categories", widget: "hidden", default: "articles"}
-
-
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
     folder: "_posts/blog/" # The path to the folder where the documents are stored
@@ -36,3 +22,16 @@ collections:
       - {label: "Image", name: "image", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Categories", name: "categories", widget: "hidden", default: "blog"}
+      
+  - name: "articles" # Used in routes, e.g., /admin/collections/blog
+    label: "Article" # Used in the UI
+    folder: "_posts/articles/" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Author", name: "author", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Categories", name: "categories", widget: "hidden", default: "articles"}
