small style changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 
-title: Unapologetics
+title: unapologetics
+tagline:
+
+quote: '"My heart I offer to you Lord, promptly and sincerely." ~ Calvin'
 
 auto: true
 markdown: kramdown
