update about, minor appearance details

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Unapologetics
 tagline:
 
-quote: '"My heart I offer to you Lord, promptly and sincerely." ~ Calvin'
+quote: '<i>"My heart I offer to you Lord, promptly and sincerely."</i>'
 
 auto: true
 markdown: kramdown
