--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,6 +1,6 @@
 
-- name: Archive
-  link: /archive/
+# - name: Archive
+#   link: /archive/
 
 - name: About
   link: /about/
@@ -14,8 +14,4 @@
 
 - name: COVID-19
   link: https://christophercarter.shinyapps.io/coronavirus/
-  external: true
-
-- name: Applied Theoretics
-  link: https://someappliedtheoretics.com/
   external: true
