--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 
-title: Unapologetics
-
-quote: '<i>"My heart I offer to you Lord, promptly and sincerely."</i>'
+title: Chris Carter
 
 auto: true
 markdown: kramdown
