--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: Chris Carter
 
 auto: true
 markdown: kramdown
-permalink: /:categories/:year/:month/:day/:title
+permalink: /:year/:month/:day/:title
