--- a/_data/links.yml
+++ b/_data/links.yml
@@ -16,3 +16,6 @@
 
 - title: COVID-19
   url: https://christophercarter.shinyapps.io/coronavirus/
+
+- title: Slow to Write
+  url: https://slowtowrite.com/
