--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -8,6 +8,10 @@
 - name: Contact
   link: /contact/
 
+- name: YouTube:
+  link: https://www.youtube.com/channel/UC-DKZlnJSaon7t9A9SHdv9Q
+  external: true
+
 - name: Buy Me a Coffee
   link: https://www.buymeacoffee.com/chrisevancarter
   external: true
