--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,12 +1,12 @@
 
-- name: About
-  link: /about/
+# - name: About
+#   link: /about/
 
 - name: Archive
   link: /archive/
 
-- name: Contact
-  link: /contact/
+# - name: Contact
+  # link: /contact/
 
 # - name: YouTube
 #   link: https://www.youtube.com/channel/UC-DKZlnJSaon7t9A9SHdv9Q
@@ -15,4 +15,3 @@
 - name: Buy Me a Coffee
   link: https://www.buymeacoffee.com/chrisevancarter
   external: true
-  button: false
