--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -2,8 +2,8 @@
 - name: Archive
   link: /archive/
 
-- name: Contact
-  link: /contact/
+- name: Write Me
+  link: /write-me/
 
 # - name: YouTube
 #   link: https://www.youtube.com/channel/UC-DKZlnJSaon7t9A9SHdv9Q
