--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -5,10 +5,9 @@
 - name: Write Me
   link: /write-me/
 
-# - name: YouTube
-#   link: https://www.youtube.com/channel/UC-DKZlnJSaon7t9A9SHdv9Q
-#   external: true
-
 - name: Coffee
   link: https://www.buymeacoffee.com/chrisevancarter
   external: true
+
+- name: Subscribe
+  link: /subscribe/
