podcast rss feed take 2

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 
 title: C.E. Carter
 author: C.E. Carter
+email: carterce1997@gmail.com
 
 description: Reformed and Postmillenial study notes, essays, commentary, and other prose.
 
