--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 
-title: C.E. Carter
+title: Telos
 author: C.E. Carter
 email: carterce1997@gmail.com
 
-description: Reformed and Postmillenial study notes, essays, commentary, and other prose.
+description: Reforming commentary.
 
 url: https://chrisevancarter.com
 
