--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: C.E. Carter
 author: C.E. Carter
 email: carterce1997@gmail.com
 
-description: Reforming commentary.
+description: The Reformed and reforming commentary of an ordinary layman.
 
 url: https://chrisevancarter.com
 
