--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ description: Reformed and reforming commentary from an ordinary layman.
 
 url: https://chrisevancarter.com
 
+spotify: https://open.spotify.com/show/5PZYTrQzGSfVsJXk24EdXS
+
 auto: true
 markdown: kramdown
 permalink: /:year/:month/:day/:title
