--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: C.E. Carter
 author: C.E. Carter
 email: carterce1997@gmail.com
 
-description: Reformed and reforming commentary from an ordinary layman.
+description: Reformed and reforming commentary.
 
 url: https://chrisevancarter.com
 
