--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ description: Reformed and reforming commentary.
 url: https://chrisevancarter.com
 
 spotify: https://open.spotify.com/show/07Cs1dMToRqjYoestMe13W
+apple_podcasts: https://podcasts.apple.com/us/podcast/c-e-carter/id1554885526
 
 auto: true
 markdown: kramdown
