--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -3,17 +3,17 @@
 - name: Listen
   link: https://open.spotify.com/show/07Cs1dMToRqjYoestMe13W
   external: true
-  description: Tune in on Spotify.
 
 - name: Read
   link: /archive/
-  description: Read older posts.
 
 - name: Coffee
   link: https://www.buymeacoffee.com/cecarter
   external: true
-  description: Support my work.
 
-- name: Contact
-  link: /write-me/
-  description: Get in touch with me.
+- name: Bio
+  link: /bio/
+
+# - name: Contact
+#   link: /write-me/
+#   description: Get in touch with me.
