--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ url: https://chrisevancarter.com
 
 spotify: https://open.spotify.com/show/07Cs1dMToRqjYoestMe13W
 apple_podcasts: https://podcasts.apple.com/us/podcast/c-e-carter/id1554885526
+anchor_link: https://anchor.fm/chris-carter3
 
 auto: true
 markdown: kramdown
