--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,5 +1,8 @@
 
 
+- name: About
+  link: /about/
+
 - name: Listen
   link: https://open.spotify.com/show/07Cs1dMToRqjYoestMe13W
   external: true
